samples/_failures_safe/1761513896_54c8cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d617316.c: In function ‘main’:
./samples/SAFE/__tmp_6d617316.c:152:5: error: expected declaration or statement at end of input
  152 |     sm.data_count = 0;
      |     ^~
